Adds host: localhost to database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,6 +23,7 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
+  host: localhost
   database: xmerch
   pool: 5
   username: xmerch
